.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Ability_to_adapt_to_new_processes_1_3__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_adapt_to_new_processes_1_3__c</fullName>
    <inlineHelpText>If 1-3 - Please tell us a bit more</inlineHelpText>
    <label>Ability to adapt to new processes - 1-3</label>
    <type>TextArea</type>
</CustomField>