.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Ability_to_adapt_to_new_processes__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_adapt_to_new_processes__c</fullName>
    <inlineHelpText>How would you rate candidate&apos;s ability to adapt to new processes or environments at your facility?</inlineHelpText>
    <label>Ability to adapt to new processes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>