.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Ability_to_carry_out_daily_routines_1_3__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_carry_out_daily_routines_1_3__c</fullName>
    <inlineHelpText>If 1-3 - Please tell us a bit more</inlineHelpText>
    <label>Ability to carry out daily routines -1-3</label>
    <type>TextArea</type>
</CustomField>