.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Ability_to_perform_tasks_yes__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_perform_tasks_yes__c</fullName>
    <inlineHelpText>If yes - Please tell us a bit more</inlineHelpText>
    <label>Ability to perform tasks - yes</label>
    <type>TextArea</type>
</CustomField>