.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Adequately_skilled_for_Alliance_s_Role__c.field-meta.xml
<CustomField>
    <fullName>Adequately_skilled_for_Alliance_s_Role__c</fullName>
    <inlineHelpText>In your opinion, is the candidate adequately skilled to meet the requirements of the role with Alliance Nursing?</inlineHelpText>
    <label>Adequately skilled for Alliance&apos;s Role?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>