.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Adequately_skilled_for_Alliance_s_Role_N__c.field-meta.xml
<CustomField>
    <fullName>Adequately_skilled_for_Alliance_s_Role_N__c</fullName>
    <inlineHelpText>If no - Please tell us a bit more</inlineHelpText>
    <label>Adequately skilled for Alliance&apos;s Role?</label>
    <type>TextArea</type>
</CustomField>