.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Adhering_to_OHS_guidelines__c.field-meta.xml
<CustomField>
    <fullName>Adhering_to_OHS_guidelines__c</fullName>
    <inlineHelpText>Does “applicant” adhere to OHS guidelines (e.g. infection control, PPE, security, handwashing &amp; lifting)</inlineHelpText>
    <label>Adhering to OHS guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>