.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Adhering_to_OHS_guidelines_No__c.field-meta.xml
<CustomField>
    <fullName>Adhering_to_OHS_guidelines_No__c</fullName>
    <inlineHelpText>If no - Please tell us a bit more</inlineHelpText>
    <label>Adhering to OHS guidelines - No</label>
    <type>TextArea</type>
</CustomField>