.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/AHPRA_based_investigations_or_disputes__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_based_investigations_or_disputes__c</fullName>
    <inlineHelpText>Has candidate been subject to any Facility or AHPRA based investigations, disputes or complaints?</inlineHelpText>
    <label>AHPRA based investigations or disputes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>