.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/AHPRA_based_investigations_yes__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_based_investigations_yes__c</fullName>
    <inlineHelpText>If yes - Please tell us a bit more</inlineHelpText>
    <label>AHPRA based investigations - yes</label>
    <type>TextArea</type>
</CustomField>