.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Any__c.field-meta.xml
<CustomField>
    <fullName>Any__c</fullName>
    <inlineHelpText>Is there anything else that you would like to share with us about the candidate?</inlineHelpText>
    <label>Anything to share about candidate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>