.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Any_hospital_based_investigations__c.field-meta.xml
<CustomField>
    <fullName>Any_hospital_based_investigations__c</fullName>
    <inlineHelpText>Did the candidate have any hospital-based investigations or complaints (at facility level or through the registration authority) during the period of employment?</inlineHelpText>
    <label>Any hospital-based investigations?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>