.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Anything_else__c.field-meta.xml
<CustomField>
    <fullName>Anything_else__c</fullName>
    <inlineHelpText>Do you have anything else you can let us know about?</inlineHelpText>
    <label>Anything else?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>