.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Anything_Else_Yes__c.field-meta.xml
<CustomField>
    <fullName>Anything_Else_Yes__c</fullName>
    <inlineHelpText>If yes - Please tell us a bit more</inlineHelpText>
    <label>Anything Else - Yes</label>
    <type>TextArea</type>
</CustomField>