.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Applicant_can_work_unsupervised__c.field-meta.xml
<CustomField>
    <fullName>Applicant_can_work_unsupervised__c</fullName>
    <inlineHelpText>Would you say “applicant” performance is consistent &amp; are they able to work well unsupervised?</inlineHelpText>
    <label>Applicant can work unsupervised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>