.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Applicant_s_duties_responsibilies__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_duties_responsibilies__c</fullName>
    <inlineHelpText>What were “applicant” clinical duties &amp; responsibilities in this role?</inlineHelpText>
    <label>Applicant&apos;s duties &amp; responsibilies</label>
    <type>TextArea</type>
</CustomField>