.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Application_V2__c.field-meta.xml
<CustomField>
    <fullName>Application_V2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application V2</label>
    <referenceTo>TR1__Application_V2__c</referenceTo>
    <relationshipLabel>3B References</relationshipLabel>
    <relationshipName>X3B_References</relationshipName>
    <type>Lookup</type>
</CustomField>