.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Attendance_and_Punctuality_1_3__c.field-meta.xml
<CustomField>
    <fullName>Attendance_and_Punctuality_1_3__c</fullName>
    <inlineHelpText>If 1-3 - Please tell us a bit more</inlineHelpText>
    <label>Attendance and Punctuality - 1 - 3</label>
    <type>TextArea</type>
</CustomField>