.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Attendance_and_Punctuality__c.field-meta.xml
<CustomField>
    <fullName>Attendance_and_Punctuality__c</fullName>
    <inlineHelpText>How would you rate candidate&apos;s attendance and punctuality?</inlineHelpText>
    <label>Attendance and Punctuality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>