.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>b3o__Contact__r.FirstName  + &quot; &quot; +  b3o__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>