.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Clinical_Skill_More_Information__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Skill_More_Information__c</fullName>
    <inlineHelpText>If needing assistance or not applicable - Please tell us a bit more</inlineHelpText>
    <label>Clinical Skill - More Information</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>