.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Clinical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Skills__c</fullName>
    <inlineHelpText>How would you rate the clinical skills demonstrated by the candidate in this role?</inlineHelpText>
    <label>Clinical Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly skilled</fullName>
            </value>
            <value>
                <fullName>Competent</fullName>
            </value>
            <value>
                <fullName>Needing assistance</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>