.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Communication_Documentation_Skills__c.field-meta.xml
<CustomField>
    <fullName>Communication_Documentation_Skills__c</fullName>
    <inlineHelpText>How would you rate “applicant’s” communication / documentation skills (if electronic notes are used, can you comment on their effectiveness)</inlineHelpText>
    <label>Communication / Documentation Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>