.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Competence_1_to_3__c.field-meta.xml
<CustomField>
    <fullName>Competence_1_to_3__c</fullName>
    <inlineHelpText>If 1-3 - Please tell us a bit more</inlineHelpText>
    <label>Competence - 1 to 3</label>
    <type>TextArea</type>
</CustomField>