.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Concerns_regarding_clinical_practice__c.field-meta.xml
<CustomField>
    <fullName>Concerns_regarding_clinical_practice__c</fullName>
    <inlineHelpText>Were there any concerns regarding the candidate&apos;s clinical practice?</inlineHelpText>
    <label>Concerns regarding clinical practice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>