.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Concerns_regarding_clinical_practice_Y__c.field-meta.xml
<CustomField>
    <fullName>Concerns_regarding_clinical_practice_Y__c</fullName>
    <inlineHelpText>If yes - Please tell us a bit more</inlineHelpText>
    <label>Concerns regarding clinical practice - Y</label>
    <type>TextArea</type>
</CustomField>