.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Concerns_to_autonomously_perform_tasks__c.field-meta.xml
<CustomField>
    <fullName>Concerns_to_autonomously_perform_tasks__c</fullName>
    <inlineHelpText>Do you have any concerns with the candidate&apos;s ability to autonomously perform tasks such as, #mobility, ADLs, oral hygiene, meal assistance# or #other tasks related to their placement#?</inlineHelpText>
    <label>Concerns to autonomously perform tasks?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>