.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Dealing_with_emergency_situation_1_3__c.field-meta.xml
<CustomField>
    <fullName>Dealing_with_emergency_situation_1_3__c</fullName>
    <inlineHelpText>If 1-3 - Please tell us a bit more</inlineHelpText>
    <label>Dealing with emergency situation - 1-3</label>
    <type>TextArea</type>
</CustomField>