.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Dealing_with_emergency_situation__c.field-meta.xml
<CustomField>
    <fullName>Dealing_with_emergency_situation__c</fullName>
    <inlineHelpText>How would you rate “applicant’s” ability to deal with emergency situations &amp; do you have confidence they are able to accurately assess, diagnose &amp; treat in these situations?</inlineHelpText>
    <label>Dealing with emergency situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>