.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Describe_clinical_community_setting__c.field-meta.xml
<CustomField>
    <fullName>Describe_clinical_community_setting__c</fullName>
    <inlineHelpText>Can you briefly describe the clinical / community setting in which “applicant” worked (demographics/specialities etc)</inlineHelpText>
    <label>Describe clinical/ community setting</label>
    <type>TextArea</type>
</CustomField>