.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Direct_Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Direct_Line_Manager__c</fullName>
    <inlineHelpText>Can you confirm if you are or have been candidate&apos;s direct line manager?</inlineHelpText>
    <label>Direct Line Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>