.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Document_Submission__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Submission</label>
    <referenceTo>b3o__Document_Submission__c</referenceTo>
    <relationshipLabel>3B References</relationshipLabel>
    <relationshipName>X3B_References</relationshipName>
    <type>Lookup</type>
</CustomField>