.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Documentation_Skill_1_3__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Skill_1_3__c</fullName>
    <inlineHelpText>If 1-3 - Please tell us a bit more</inlineHelpText>
    <label>Documentation Skill - 1 - 3</label>
    <type>TextArea</type>
</CustomField>