.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/For_how_long_did_candidate_report_to__c.field-meta.xml
<CustomField>
    <fullName>For_how_long_did_candidate_report_to__c</fullName>
    <inlineHelpText>For how long did the candidate report to you?</inlineHelpText>
    <label>For how long did candidate report to</label>
    <type>TextArea</type>
</CustomField>