.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Handling_medication_administration__c.field-meta.xml
<CustomField>
    <fullName>Handling_medication_administration__c</fullName>
    <inlineHelpText>Does “applicant” demonstrate due care &amp; attention to medication administration/ distribution? Any errors to your knowledge?</inlineHelpText>
    <label>Handling medication administration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>