.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Handling_medication_administration_No__c.field-meta.xml
<CustomField>
    <fullName>Handling_medication_administration_No__c</fullName>
    <inlineHelpText>If no - Please tell us a bit more</inlineHelpText>
    <label>Handling medication administration  --No</label>
    <type>TextArea</type>
</CustomField>