.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Happy_to_provide_References__c.field-meta.xml
<CustomField>
    <fullName>Happy_to_provide_References__c</fullName>
    <inlineHelpText>Are you happy to provide a reference for your time working with the candidate?</inlineHelpText>
    <label>Happy to provide References?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>