.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Hospital_based_Investigation_Yes__c.field-meta.xml
<CustomField>
    <fullName>Hospital_based_Investigation_Yes__c</fullName>
    <inlineHelpText>If yes - Please tell us a bit more</inlineHelpText>
    <label>Hospital-based Investigation - Yes</label>
    <type>TextArea</type>
</CustomField>