.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/How_long_under_your_supervision__c.field-meta.xml
<CustomField>
    <fullName>How_long_under_your_supervision__c</fullName>
    <inlineHelpText>How long was the candidate under your supervision during their placement?</inlineHelpText>
    <label>How long under your supervision?</label>
    <type>TextArea</type>
</CustomField>