.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/If_needing_assistance_Please_tell_us__c.field-meta.xml
<CustomField>
    <fullName>If_needing_assistance_Please_tell_us__c</fullName>
    <inlineHelpText>If needing assistance or not applicable - Please tell us a bit more</inlineHelpText>
    <label>If needing assistance - Please tell us</label>
    <type>TextArea</type>
</CustomField>