.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Interaction_with_other_team_members_1_3__c.field-meta.xml
<CustomField>
    <fullName>Interaction_with_other_team_members_1_3__c</fullName>
    <inlineHelpText>If 1-3 - Please tell us a bit more</inlineHelpText>
    <label>Interaction with other team members -1-3</label>
    <type>TextArea</type>
</CustomField>