.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Interaction_with_other_team_members__c.field-meta.xml
<CustomField>
    <fullName>Interaction_with_other_team_members__c</fullName>
    <inlineHelpText>How would you rate candidate&apos;s interactions and work with other team members?</inlineHelpText>
    <label>Interaction with other team members</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>