.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Permission_to_disclose_reference_check__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_disclose_reference_check__c</fullName>
    <inlineHelpText>Do you give permission for us to disclose this reference check to candidate if requested?</inlineHelpText>
    <label>Permission to disclose reference check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>