.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/permission_to_disclose_this_reference__c.field-meta.xml
<CustomField>
    <fullName>permission_to_disclose_this_reference__c</fullName>
    <inlineHelpText>Do we have your permission to disclose this reference to selected potential employers for the duration of #first_name#&apos;s employment with our agency?</inlineHelpText>
    <label>Permission to disclose this reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>