.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rate_level_of_competence__c.field-meta.xml
<CustomField>
    <fullName>Rate_level_of_competence__c</fullName>
    <inlineHelpText>How would you rate the candidate&apos;s level of competence?</inlineHelpText>
    <label>Rate level of competence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>