.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rate_skills_demonstrated_in_role__c.field-meta.xml
<CustomField>
    <fullName>Rate_skills_demonstrated_in_role__c</fullName>
    <inlineHelpText>How would you rate the skills demonstrated by the candidate in this role?</inlineHelpText>
    <label>Rate skills demonstrated in role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly skilled</fullName>
            </value>
            <value>
                <fullName>Competent</fullName>
            </value>
            <value>
                <fullName>Needing assistance</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>