.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rating_applicant_s_ability_to_do_tasks__c.field-meta.xml
<CustomField>
    <fullName>Rating_applicant_s_ability_to_do_tasks__c</fullName>
    <inlineHelpText>How would you rate “applicant’s” ability to carry out their daily duties (time management, ability to prioritise etc)</inlineHelpText>
    <label>Rating applicant&apos;s ability to do tasks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>