.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Re_employ_the_candidate__c.field-meta.xml
<CustomField>
    <fullName>Re_employ_the_candidate__c</fullName>
    <inlineHelpText>Given the opportunity, would you re-employ the candidate?</inlineHelpText>
    <label>Re-employ the candidate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>