.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Referee_Contact_Permission__c.field-meta.xml
<CustomField>
    <fullName>Referee_Contact_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referee Contact Permission</label>
    <type>Checkbox</type>
</CustomField>