.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Reference_check_completed__c.field-meta.xml
<CustomField>
    <fullName>Reference_check_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference check completed</label>
    <type>Checkbox</type>
</CustomField>