.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Reference_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Form_Name__c</fullName>
    <description>This field will be used in the background to identify the document submission record related to the 3B reference record.</description>
    <label>Reference Form Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>