.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Reference_Received__c.field-meta.xml
<CustomField>
    <fullName>Reference_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Received</label>
    <type>Checkbox</type>
</CustomField>