.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <formula>TEXT(Application_V2__r.TR1__Job__r.Reference_Type__c)</formula>
    <label>Reference Type</label>
    <type>Text</type>
</CustomField>