.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Reference_Types__c.field-meta.xml
<CustomField>
    <fullName>Reference_Types__c</fullName>
    <label>Reference Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General - Clinical</fullName>
            </value>
            <value>
                <fullName>Non - Clinical</fullName>
            </value>
            <value>
                <fullName>Rural Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>