.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rehire_applicant_further_comments__c.field-meta.xml
<CustomField>
    <fullName>Rehire_applicant_further_comments__c</fullName>
    <inlineHelpText>Would you rehire “applicant” &amp; do you have any further comments you’d like to make?</inlineHelpText>
    <label>Rehire applicant &amp; further comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>