.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rehire_applicant_further_comments_Yes__c.field-meta.xml
<CustomField>
    <fullName>Rehire_applicant_further_comments_Yes__c</fullName>
    <inlineHelpText>If yes - Please tell us a bit more</inlineHelpText>
    <label>Rehire applicant &amp; further comments -Yes</label>
    <type>TextArea</type>
</CustomField>