.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rejected_By_1st_Approval__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By_1st_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rejected By (1st Approval)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X3B_References3</relationshipName>
    <type>Lookup</type>
</CustomField>